change .getFIrst() on get(0) in LoginTests and LogoutTests